고가용성 kubernetes 3tier achitecture/kubernetes/ingress/ingress-wordpress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: wordpress
spec:
  ingressClassName: nginx
  rules:
    - host: www.1st-project.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress-svc
                port:
                  number: 80
